--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.10+1
   intl: ^0.16.1
   stream_transform: ^0.0.19
-
+  flutter_range_slider: ^1.5.0
 
 dev_dependencies:
   flutter_test:
