--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.16.1
   stream_transform: ^0.0.19
   flutter_range_slider: ^1.5.0
+  lazy_load_scrollview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
